--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -59,7 +59,8 @@
 
 
 
-        <link rel="shortcut icon" href="{{url_for('static', filename='favicon.ico')}}">
+        <!--<link rel="shortcut icon" href="{{url_for('static', filename='favicon.ico')}}">-->
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
 
     </body>
