--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %} 
 {% block title %} Home {% endblock %}
 
-{% block content %}This is the index{% endblock %}
+{% block content %}
+
+
+
+
+{% endblock %}
