--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -29,8 +29,9 @@
           </button>
             <div class="collapse navbar-collapse" id="navbar">
               <div class="navbar-nav">
-                <a class="nav-item nav-link" id="home" href="/">About Dorothy</a>
+                <a class="nav-item nav-link" id="home" href="/">About Me</a>
                 <a class="nav-item nav-link" id="logout" href="/resume">Dorothy's Resume</a>
+                <a class="nav-item nav-link" id="logout" href="/linkedn">Linkedin</a>
 
               </div>
             </div>
