--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,9 +1,13 @@
 {% extends "base.html" %} 
-{% block title %} Home {% endblock %}
+{% block title %} Dorothy Hung: About Me {% endblock %}
 
 {% block content %}
-
-
+<br/>
+<h1>Welcome to my website</h1>
+<h2>Student at Bellevue College</h2>
+<h2>Completing Associate's in Business Data Analysis</h2>
+<h2>Pursuing Bachelor's in Software Development</h2>
+<p>Actively applying to internships and jobs.</p>
 
 
 {% endblock %}
