--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -30,8 +30,9 @@
             <div class="collapse navbar-collapse" id="navbar">
               <div class="navbar-nav">
                 <a class="nav-item nav-link" id="home" href="/">About Me</a>
-                <a class="nav-item nav-link" id="logout" href="/resume">Dorothy's Resume</a>
-                <a class="nav-item nav-link" id="logout" href="/linkedn">Linkedin</a>
+                <a class="nav-item nav-link" id="resume" href="/resume">Dorothy's Resume</a>
+                <a class="nav-item nav-link" id="linkedin" href="/linkedn">Linkedin</a>
+                <a class="nav-item nav-link" id="project" href="/project">Spotify Project</a>
 
               </div>
             </div>
@@ -61,7 +62,7 @@
 
 
         <!--<link rel="shortcut icon" href="{{url_for('static', filename='favicon.ico')}}">-->
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+        <link rel="shortcut icon" type="image/x-icon" href="..static/favicon_io/favicon.ico" />
 
 
     </body>
