--- a/website/templates/linkedn.html
+++ b/website/templates/linkedn.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %} 
-{% block title %} Dorothy Hung's Linkedn {% endblock %}
+{% block title %} Dorothy Hung's Linkedin {% endblock %}
 
 {% block content %}
 
 <p>Check out my <a href="https://www.linkedin.com/in/dorothyhung1" target="_blank" rel="noopener noreferrer">Linkedin</a>.</p>
 
-
+<p>Take a look at my <a href="https://github.com/Dorothyhung" target="_blank" rel="noopener noreferrer">Github</a>.</p>
 
 {% endblock %}
