--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -35,6 +35,7 @@
                   <a class="nav-item nav-link font-weight-bold" id="home" href="/">About Me</a>
                   <a class="nav-item nav-link font-weight-bold" id="resume" href="/resume">Resume</a>
                   <a class="nav-item nav-link font-weight-bold" id="linkedn" href="/linkedn">Linkedn</a>
+                  <a class="nav-item nav-link font-weight-bold" id="github" href="/github">Github</a>
                   <div class="dropdown show">
                     <a class="nav-item nav-link dropdown-toggle font-weight-bolder" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
                       Spotify Project
