--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -3,11 +3,29 @@
 
 {% block content %}
 <br/>
-<h1>Welcome to my website</h1>
-<h2>Student at Bellevue College</h2>
-<h2>Completing Associate's in Business Data Analysis</h2>
-<h2>Pursuing Bachelor's in Software Development</h2>
-<p>Actively applying to internships and jobs.</p>
+<body style=""></body>
+<h1>Dorothy Hung</h1>
+</br>
+<h2><b>Student at Bellevue College</b></h2>
+</br>
+<h4><em>Motivated Software Development student from Bellevue College with proven problem-solving and organizational skills.
+    Completed an Associate's in Business Data Analysis (3.97 GPA) and pursuing a Bachelor's in Software Development (4.0 GPA).
+    Actively applying to internships/jobs. 
+</em></h4>
+</br>
+<h3><b>Skills and Abilities</b></h3>
+<h5>
+    <ul>
+        <li>SQL, R, Database Design, Data Vizualization and Modeling</li>
+        <li>Python, Java, C#, HTML</li>
+        <li>CS fundamentals, algorithms, software design</li>
+        <li>Understand basic statistical analysis, marketing, and accounting</li>
+        <li>Have great interpersonal communication skills</li>
+    </ul>
+</h5>
+</br>
+<h4><em>Contact me at <a href = "mailto: abc@example.com">dorothyh0602@gmail.com</a>
+</em></h4>
 
 
 {% endblock %}
