--- a/website/templates/linkedn.html
+++ b/website/templates/linkedn.html
@@ -2,9 +2,15 @@
 {% block title %} Dorothy Hung's Linkedin {% endblock %}
 
 {% block content %}
+<style>
+    body {
+      background-image: url('img_girl.jpg');
+    }
+</style>
+
+
 </br></br>
 <p>Check out my <a href="https://www.linkedin.com/in/dorothyhung1" target="_blank" rel="noopener noreferrer">Linkedin</a>.</p>
-</br></br>
-<p>Take a look at my <a href="https://github.com/Dorothyhung" target="_blank" rel="noopener noreferrer">Github</a>.</p>
+
 
 {% endblock %}
