--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -16,7 +16,7 @@
 <h3><b>Skills and Abilities</b></h3>
 <h5>
     <ul>
-        <li>SQL, R, Database Design, Data Vizualization and Modeling</li>
+        <li>SQL, R, database design, data vizualization and modeling</li>
         <li>Python, Java, C#, HTML</li>
         <li>CS fundamentals, algorithms, software design</li>
         <li>Understand basic statistical analysis, marketing, and accounting</li>
@@ -24,8 +24,12 @@
     </ul>
 </h5>
 </br>
-<h4><em>Contact me at <a href = "mailto: abc@example.com">dorothyh0602@gmail.com</a>
+<center><h4><em>Contact me at <a href = "mailto: dorothyh0602@gmail.com">dorothyh0602@gmail.com</a></center>
 </em></h4>
+
+</br></br>
+
+<center><img src="/static/images/extremeswag.jpg" alt="extremeswag" style="width:200px; height:260px;"></center>
 
 
 {% endblock %}
