--- a/website/templates/project.html
+++ b/website/templates/project.html
@@ -5,6 +5,8 @@
     <br /><br />
     <h4>Spotify API Web Scraping Project (In Progress)</h4>
     <br /><br />
+    <p>I love listening to music on Spotify, so I made a project about my passion!</p>
+    </br></br>
     <h5>Purpose: Provide more interesting data to help Spotify users find songs they will like based on specific criteria/data from Spotify's API</h5>
     <br /><br />
     <h5>Project Requirements: </h5>
