Add Flask website tab

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -42,9 +42,11 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                       <a class="dropdown-item" href="/project">Project</a>
-                      <a class="dropdown-item" href="/project">Project Code</a>
+                      <a class="dropdown-item" href="/projectcode">Project Code</a>
                     </div>
                   </div>
+                  <a class="nav-item nav-link font-weight-bold" id="flaskapp" href="/flaskapp">Flask Website</a>
+                  
                 </ul>
               </div>
             </div>
@@ -75,9 +77,10 @@
         
 
 
-        <!--<link rel="shortcut icon" href="{{url_for('static', filename='favicon.ico')}}">-->
-        <link rel="shortcut icon" type="image/x-icon" href="..static/favicon_io/favicon.ico" />
-
+        <link rel="shortcut icon" href="{{url_for('static', filename='favicon.ico')}}">
+        <link rel="shortcut icon" type="image/x-icon" href="/static/favicon_io/favicon.ico" />
+        <link rel="icon" href="/static/favicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon" />
 
     </body>
 </html>
