--- a/website/templates/resume.html
+++ b/website/templates/resume.html
@@ -5,8 +5,7 @@
     <!--<embed src="../static/files/DorothyHungResume.pdf" style="width: 100%; height:100vh;">-->
 
     <object data="../static/files/DorothyHungResume.pdf" type="application/pdf" style="width:100%; height:100vh;">
-    <p>Your web browser doesn't have a PDF plugin.
-    Instead you can <a href="../static/files/DorothyHungResume.pdf">click here to
+    <p>Your web browser doesn't have a PDF plugin. Instead you can <a href="../static/files/DorothyHungResume.pdf">click here to
     download the PDF file.</a></p>
     </object>
 {% endblock %}
