Added dropdown for links

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset=""utf-8 />
+        <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link
             rel="stylesheet"
@@ -34,8 +34,15 @@
               <div class="navbar-nav">
                   <a class="nav-item nav-link font-weight-bold" id="home" href="/">About Me</a>
                   <a class="nav-item nav-link font-weight-bold" id="resume" href="/resume">Resume</a>
-                  <a class="nav-item nav-link font-weight-bold" id="linkedn" href="/linkedn">Linkedn</a>
-                  <a class="nav-item nav-link font-weight-bold" id="github" href="/github">Github</a>
+                  <div class="dropdown show">
+                    <a class="nav-item nav-link dropdown-toggle font-weight-bolder" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+                      Links
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                      <a class="dropdown-item" href="https://www.linkedin.com/in/dorothyhung1" target="_blank" rel="noopener noreferrer">Linkedin</a>
+                      <a class="dropdown-item" href="https://github.com/Dorothyhung" target="_blank" rel="noopener noreferrer">Github</a>
+                    </div>
+                  </div>
                   <div class="dropdown show">
                     <a class="nav-item nav-link dropdown-toggle font-weight-bolder" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
                       Spotify Project
