--- a/website/templates/flaskapp.html
+++ b/website/templates/flaskapp.html
@@ -6,7 +6,7 @@
 
 <center><img src="/static/images/flasklogo.png" alt="Flask logo" style="width:128px;height:128px;background-color:transparent"></center>
 
-</br></br>
+</br>
 
     
 
@@ -29,7 +29,7 @@
 
 <br /><br />
 
-<h5>Steps</h5>
+<h5>Steps:</h5>
 <ol>
     <li>Install and setup Flask</li>
     <li>Obtained a Google domain</li>
