Add certificates page

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -34,6 +34,7 @@
               <div class="navbar-nav">
                   <a class="nav-item nav-link font-weight-bold" id="home" href="/">About Me</a>
                   <a class="nav-item nav-link font-weight-bold" id="resume" href="/resume">Resume</a>
+                  <a class="nav-item nav-link font-weight-bold" id="cert" href="/certificates">Certificates</a>
                   <div class="dropdown show">
                     <a class="nav-item nav-link dropdown-toggle font-weight-bolder" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
                       Links
