--- a/website/templates/flaskapp.html
+++ b/website/templates/flaskapp.html
@@ -6,7 +6,7 @@
 
 <center><img src="/static/images/flasklogo.png" alt="Flask logo" style="width:128px;height:128px;background-color:transparent"></center>
 
-</br>
+<br />
 
     
 
@@ -14,6 +14,7 @@
 <br /><br />
 <h4><center>Development of a Flask Website</center></h4>
 <h6><center>How I created dorothyhung.net</center></h6>
+<h6><center>View my code <a href="https://github.com/Dorothyhung/FlaskWebApp" target="_blank" rel="noopener noreferrer">here</a></center></h6>
 <br /><br />
 <h5>Purpose: </h5>
 <h6>Showcase personal projects, learn to use new web development frameworks, and practice web development and programming</h6>
@@ -33,13 +34,13 @@
 <ol>
     <li>Install and setup Flask</li>
     <li>Obtained a Google domain</li>
-    <li>Linked the Google domain to the <a href="https://vercel.com/">Vercel</a> platform to host my website</li>
+    <li>Linked the Google domain to the <a href="https://vercel.com/" target="_blank" rel="noopener noreferrer">Vercel</a> platform to host my website</li>
     <li>Connected Vercel to Github</li>
     <li>Designed, built, and troubleshot the website</li>
     <ul>
         <li>Routes/views using Python and Blueprint</li>
         <li>Jinja and HTML templates for each page</li>
-        <li>Add bootstrap CSS for <a href=https://bootswatch.com/darkly>Darkly</a> theme</li>
+        <li>Add bootstrap CSS for <a href="https://bootswatch.com/darkly" target="_blank" rel="noopener noreferrer">Darkly</a> theme</li>
     </ul>
     <li>Commit and push repository to Github</li>
 </ol>
@@ -48,9 +49,10 @@
 
 <h5>What programs did I use?</h5>
 <ul>
-    <li>Flask, Blueprint, Bootstrap</li>
-    <li>Python, HTML, CSS</li>
+    <li>Flask, Blueprint, Bootstrap/Bootswatch</li>
+    <li>Python, HTML, Jinja, CSS</li>
     <li>VS Code, Github, Gitbash</li>
+    <li>Google Domains and Vercel</li>
 </ul>
 
 </br></br>
