Resume edit and css folder

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} 
-{% block title %} Dorothy Hung: About Me {% endblock %}
+{% block title %} Dorothy Hung {% endblock %}
 
 {% block content %}
 <br/>
