--- a/website/templates/flaskapp.html
+++ b/website/templates/flaskapp.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} 
-{% block title %} Dorothy Hung's Github {% endblock %}
+{% block title %} Dorothy Hung's Website {% endblock %}
 
 {% block content %}
 </br></br>
