--- a/website/templates/project.html
+++ b/website/templates/project.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} Dorothy's Resume {% endblock %}
+{% block title %} My Spotify Project {% endblock %}
 
 {% block content %}
     <br /><br />
