--- a/website/templates/projectcode.html
+++ b/website/templates/projectcode.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} 
-{% block title %} Dorothy Hung's Linkedin {% endblock %}
+{% block title %} My Spotify Project Code {% endblock %}
 
 {% block content %}
 
