--- a/website/templates/resume.html
+++ b/website/templates/resume.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 </br>
-    <object data="../static/files/DorothyHungResume.pdf" type="application/pdf" style="width:100%; height:100vh;">
-    <p>Your web browser doesn't have a PDF plugin. Instead you can <a href="../static/files/DorothyHungResume.pdf">click here to
+    <object data="../static/files/Resume.pdf" type="application/pdf" style="width:100%; height:100vh;">
+    <p>Your web browser doesn't have a PDF plugin. Instead you can <a href="../static/files/Resume.pdf">click here to
     download the PDF file.</a></p>
     </object>
 {% endblock %}
