--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -33,10 +33,11 @@
 </br>
 <center><h4><em>Contact me at <a href = "mailto: dorothyh0602@gmail.com">dorothyh0602@gmail.com</a></center>
 </em></h4>
-
+</br></br>
+<center><img src="/static/images/me.jpg" alt="extremeswag" style="width:100px; height:150px;"></center>
 </br></br>
 
-<center><img src="/static/images/extremeswag.jpg" alt="extremeswag" style="width:200px; height:260px;"></center>
+
 
 
 {% endblock %}
