Add horsepower stats project

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -3,16 +3,15 @@
 
 {% block content %}
 <br/>
-<body style=""></body>
 <h3>Dorothy Hung</h3>
 </br>
 
 
-<h4><b>Student at Bellevue College</b></h4>
+<h4><b>Student at Bellevue College/Incoming Web Development Intern</b></h4>
 </br>
 <h4><em>Motivated Software Development student from Bellevue College with proven problem-solving and organizational skills.
-    Completed an Associate's in Business Data Analysis (3.97 GPA) and pursuing a Bachelor's in Software Development (4.0 GPA).
-    Actively applying to internships/jobs. 
+    Completed an Associate's in Business Data Analysis and pursuing a Bachelor's in Software Development due to graduate June 2024.
+    Actively applying to internships for 2023-2024. 
 </em></h4>
 </br>
 
