--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -53,7 +53,15 @@
                     </div>
                   </div>
                   <a class="nav-item nav-link font-weight-bold" id="flaskapp" href="/flaskapp">Flask Website</a>
-                  
+                  <div class="dropdown show">
+                    <a class="nav-item nav-link dropdown-toggle font-weight-bolder" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+                      Other Projects
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                      <a class="dropdown-item" href="/horsepower">Horsepower Statistics</a>
+                      <a class="dropdown-item" href="/projectcode">Project 2</a>
+                    </div>
+                  </div>
                 </ul>
               </div>
             </div>
