--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -9,7 +9,7 @@
 
 <h4><b>Student at Bellevue College/Incoming Web Development Intern</b></h4>
 </br>
-<h4><em>Motivated Software Development student from Bellevue College with proven problem-solving and organizational skills.
+<h4><em>Motivated Software Development student from Bellevue College with technical and critical thinking skills.
     Completed an Associate's in Business Data Analysis and pursuing a Bachelor's in Software Development due to graduate June 2024.
     Actively applying to internships for 2023-2024. 
 </em></h4>
