--- a/website/templates/notesapplogin.html
+++ b/website/templates/notesapplogin.html
@@ -1,11 +1,20 @@
-{% extends "base.html" %}
+{% extends "notesapp.html" %}
 {% block title %} Login to Notes {% endblock %}
 
 {% block content %}
-<h2>Welcome to Notes App</h2>
-
-<a href="/notesapplogout" class="btn btn-primary">Logout</a>
-
-
+<form method="POST">
+    <h3 align="center">Login</h3>
+    <div class="form-group">
+        <label for="email">Email Address</label>
+        <input type="email" class="form-control" id="email" name="email" placeholder="Enter email" />
+    </div>
+    <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" />
+    </div>
+    <br>
+    <button type="submit" class="btn btn-primary">Login</button>
+</form>
 
 {% endblock %}
+
