--- a/website/templates/notesapp.html
+++ b/website/templates/notesapp.html
@@ -11,4 +11,6 @@
 </div>
 
 <h2>Welcome to Notes App</h2>
+</br>
+<h3>This is a simple web app to allow users to sign up or log in to create and view notes. Users and notes will be stored in a SQL database server.</h3>
 {% endblock %}
