--- a/website/templates/notesapplogin.html
+++ b/website/templates/notesapplogin.html
@@ -3,6 +3,12 @@
 {% block title %} Login to Notes {% endblock %}
 
 {% block content %}
+</br></br>
+<div>
+    <a href="/notesapp" class="btn btn-primary">Notes Home</a>
+    <a href="/notesappsignup" class="btn btn-primary">Sign Up</a>
+</div>
+
 <form method="POST">
     <h3 align="center">Login</h3>
     <div class="form-group">
