--- a/website/templates/notesappsignup.html
+++ b/website/templates/notesappsignup.html
@@ -3,7 +3,11 @@
 {% block title %} Sign Up for Notes {% endblock %}
 
 {% block content %}
-
+</br></br>
+<div>
+    <a href="/notesapp" class="btn btn-primary">Notes Home</a>
+    <a href="/notesapplogin" class="btn btn-primary">Login here</a>
+</div>
 <form method="POST">
     <h3 align="center">Sign up</h3>
     
