Create database for notes app

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -19,7 +19,7 @@
 <h4><b>Skills and Abilities</b></h4>
 <h5>
     <ul>
-        <li>SQL, R, database design, data vizualization and modeling</li>
+        <li>SQL, database design, data vizualization and modeling</li>
         <li>Python, Java, C#, HTML</li>
         <li>CS fundamentals, algorithms, software design</li>
         <li>Understand basic statistical analysis, marketing, and accounting</li>
