--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -69,7 +69,7 @@
             </div>
         </nav>
         
-
+        <!--messages for sign up-->
         {% with messages = get_flashed_messages(with_categories=true) %} {% if
           messages %} {% for category, message in messages %} {% if category ==
           'error' %}
