update resume and index page

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -7,25 +7,19 @@
 </br>
 
 
-<h4><b>Student at Bellevue College/Incoming Web Development Intern</b></h4>
+<h4><b>Student at Bellevue College</b></h4>
 </br>
-<h4><em>Motivated Software Development student from Bellevue College with technical and critical thinking skills.
-    Completed an Associate's in Business Data Analysis and pursuing a Bachelor's in Software Development due to graduate June 2024.
-    Actively applying to internships for 2023-2024. 
+<h4><em>
+    BAS, Software Development 2024<br>
+    AAS, Business Data Analysis 2022
 </em></h4>
 </br>
 
+<h4>
+    Use the navbar to view resume, Github, Linkedn, and other projects!
+</h4>
 
-<h4><b>Skills and Abilities</b></h4>
-<h5>
-    <ul>
-        <li>SQL, database design, data vizualization and modeling</li>
-        <li>Python, Java, C#, HTML</li>
-        <li>CS fundamentals, algorithms, software design</li>
-        <li>Understand basic statistical analysis, marketing, and accounting</li>
-        <li>Have great interpersonal communication skills</li>
-    </ul>
-</h5>
+
 
 
 
