clean up navbar links

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -10,7 +10,7 @@
 <h4><b>Student at Bellevue College</b></h4>
 </br>
 <h4><em>
-    BAS, Software Development 2024<br>
+    BAS, Software (App) Development 2024<br>
     AAS, Business Data Analysis 2022
 </em></h4>
 </br>
