--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -49,11 +49,11 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                       <a class="dropdown-item" href="/project">Project</a>
-                      <a class="dropdown-item" href="/projectcode">Project Code</a>
+                      <a class="dropdown-item" target="_blank" href="https://github.com/Dorothyhung/SpotifyAnalysis">Project Code</a>
                     </div>
                   </div>
                   <a class="nav-item nav-link font-weight-bold" id="flaskapp" href="/flaskapp">Flask Website</a>
-                  <a class="nav-item nav-link font-weight-bold" id="notesapp"target="_blank" href="https://avg.dorothyhung.net">Average Program</a>
+                  <a class="nav-item nav-link font-weight-bold" id="notesapp" target="_blank" href="https://avg.dorothyhung.net">Average Program</a>
                   <a class="nav-item nav-link font-weight-bold" id="notesapp" href="/notesapp">Notes App</a>
                   <div class="dropdown show">
                     <a class="nav-item nav-link dropdown-toggle font-weight-bolder" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
@@ -61,7 +61,6 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                       <a class="dropdown-item" href="/horsepower">Horsepower Statistics</a>
-                      <a class="dropdown-item" href="/projectcode">Project 2</a>
                     </div>
                     
                   </div>
