add contact page

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -62,8 +62,8 @@
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                       <a class="dropdown-item" href="/horsepower">Horsepower Statistics</a>
                     </div>
-                    
                   </div>
+                  <a class="nav-item nav-link font-weight-bold" id="contact" href="/contact">Contact Me</a>
                 </ul>
               </div>
             </div>
