add spotify project

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -54,6 +54,7 @@
                   </div>
                   <a class="nav-item nav-link font-weight-bold" id="flaskapp" href="/flaskapp">Flask Website</a>
                   <a class="nav-item nav-link font-weight-bold" id="notesapp" target="_blank" href="https://avg.dorothyhung.net">Average Program</a>
+                  <a class="nav-item nav-link font-weight-bold" id="notesapp" target="_blank" href="http://spotifyscraper.dorothyhung.net">Spotify Analysis</a>
                   <a class="nav-item nav-link font-weight-bold" id="notesapp" href="/notesapp">Notes App</a>
                   <div class="dropdown show">
                     <a class="nav-item nav-link dropdown-toggle font-weight-bolder" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
