--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -33,7 +33,7 @@
               <div class="navbar-nav">
                   <a class="nav-item nav-link font-weight-bold" id="home" href="/">About Me</a>
                   <a class="nav-item nav-link font-weight-bold" id="resume" href="/resume">Resume</a>
-                  <a class="nav-item nav-link font-weight-bold" id="cert" href="/certificates">Certificates</a>
+                  <!-- <a class="nav-item nav-link font-weight-bold" id="cert" href="/certificates">Certificates</a> -->
                   <div class="dropdown show">
                     <a class="nav-item nav-link dropdown-toggle font-weight-bolder" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
                       Links
@@ -50,11 +50,11 @@
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                       <a class="dropdown-item" href="/project">Project</a>
                       <a class="dropdown-item" target="_blank" href="https://github.com/Dorothyhung/SpotifyAnalysis">Project Code</a>
+                      <a class="dropdown-item" target="_blank" href="http://spotifyscraper.dorothyhung.net">Spotify Analysis Website</a>
                     </div>
                   </div>
                   <a class="nav-item nav-link font-weight-bold" id="flaskapp" href="/flaskapp">Flask Website</a>
                   <a class="nav-item nav-link font-weight-bold" id="notesapp" target="_blank" href="https://avg.dorothyhung.net">Average Program</a>
-                  <a class="nav-item nav-link font-weight-bold" id="notesapp" target="_blank" href="http://spotifyscraper.dorothyhung.net">Spotify Analysis</a>
                   <a class="nav-item nav-link font-weight-bold" id="notesapp" href="/notesapp">Notes App</a>
                   <div class="dropdown show">
                     <a class="nav-item nav-link dropdown-toggle font-weight-bolder" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
