--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -53,6 +53,7 @@
                       <a class="dropdown-item" target="_blank" href="http://spotifyscraper.dorothyhung.net">Spotify Analysis Website</a>
                     </div>
                   </div>
+                  <a class="nav-item nav-link font-weight-bold" id="game" href="/game">Game</a>
                   <a class="nav-item nav-link font-weight-bold" id="flaskapp" href="/flaskapp">Flask Website</a>
                   <a class="nav-item nav-link font-weight-bold" id="notesapp" target="_blank" href="https://avg.dorothyhung.net">Average Program</a>
                   <a class="nav-item nav-link font-weight-bold" id="notesapp" href="/notesapp">Notes App</a>
