--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -12,13 +12,13 @@
             href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
             crossorigin="anonymous"
         />
+        {% block style %}{% endblock %}
 
 
 
         <title>{% block title %}Home{% endblock %}</title>
     </head>
-    <body></body>
-
+    <body>
         <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #87CEEB;">
           <a class="navbar-brand font-weight-bold" href="/">Dorothy Hung</a>
           <button
