add google analytics

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -14,7 +14,15 @@
         />
         {% block style %}{% endblock %}
 
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-2FJ41Q9Z80"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
 
+          gtag('config', 'G-2FJ41Q9Z80');
+        </script>
 
         <title>{% block title %}Home{% endblock %}</title>
     </head>
