update google tag

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -15,13 +15,12 @@
         {% block style %}{% endblock %}
 
         <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-2FJ41Q9Z80"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-5PJQPSF006"></script>
         <script>
           window.dataLayer = window.dataLayer || [];
           function gtag(){dataLayer.push(arguments);}
           gtag('js', new Date());
-
-          gtag('config', 'G-2FJ41Q9Z80');
+          gtag('config', 'G-5PJQPSF006');
         </script>
 
         <title>{% block title %}Home{% endblock %}</title>
