--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -60,15 +60,15 @@
                       <a class="dropdown-item" target="_blank" href="http://spotifyscraper.dorothyhung.net">Spotify Analysis Website</a>
                     </div>
                   </div>
-                  <a class="nav-item nav-link font-weight-bold" id="game" href="/game">Game</a>
-                  <a class="nav-item nav-link font-weight-bold" id="flaskapp" href="/flaskapp">Flask Website</a>
-                  <a class="nav-item nav-link font-weight-bold" id="notesapp" target="_blank" href="https://avg.dorothyhung.net">Average Program</a>
-                  <a class="nav-item nav-link font-weight-bold" id="notesapp" href="/notesapp">Notes App</a>
                   <div class="dropdown show">
                     <a class="nav-item nav-link dropdown-toggle font-weight-bolder" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
-                      Other Projects
+                      More Projects
                     </a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                      <a class="dropdown-item" id="flaskapp" href="/flaskapp">Flask Website</a>
+                      <a class="dropdown-item" id="game" href="/game">Game</a>
+                      <a class="dropdown-item" id="avgprogram" target="_blank" href="https://avg.dorothyhung.net">Average Program</a>
+                      <a class="dropdown-item" id="notesapp" href="/notesapp">Notes App</a>
                       <a class="dropdown-item" href="/horsepower">Horsepower Statistics</a>
                     </div>
                   </div>
