--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -68,6 +68,7 @@
                       <a class="dropdown-item" id="flaskapp" href="/flaskapp">Flask Website</a>
                       <a class="dropdown-item" id="game" href="/game">Game</a>
                       <a class="dropdown-item" id="avgprogram" target="_blank" href="https://avg.dorothyhung.net">Average Program</a>
+                      <a class="dropdown-item" href="/counter">Row Counter</a>
                       <a class="dropdown-item" id="notesapp" href="/notesapp">Notes App</a>
                       <a class="dropdown-item" href="/horsepower">Horsepower Statistics</a>
                     </div>
