--- a/website/templates/project.html
+++ b/website/templates/project.html
@@ -3,9 +3,7 @@
 
 {% block content %}
     <br /><br />
-    <h4>Spotify API Web Scraping Project (In Progress)</h4>
-    <br /><br />
-    <p>I love listening to music on Spotify, so I made a project about my passion!</p>
+    <h4>Spotify Track Analysis Project</h4>
     </br></br>
     <h5>Purpose: Provide more interesting data to help Spotify users find songs they will like based on specific criteria/data from Spotify's API</h5>
     <br /><br />
@@ -26,18 +24,10 @@
         <li>accousticness</li>
         <li>danceability</li>
         <li>duration_ms</li>
-        <li>enery</li>
+        <li>energy</li>
         <li>instrumentalness</li>
         <li>loudness</li>
         <li>valence</li>
-    </ul>
-    <h6>Get track: basic data I should include:</h6>
-    <ul>
-        <li>genres</li>
-        <li>name</li>
-        <li>popularity</li>
-        <li>duration</li>
-        <li>explicit bool</li>
     </ul>
     <br /><br />
     <h6>Examples:</h6>
