--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -12,6 +12,9 @@
             href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
             crossorigin="anonymous"
         />
+        <link
+            rel="stylesheet"
+            href="./../static/css/style.css" />
         {% block style %}{% endblock %}
 
         <!-- Google tag (gtag.js) -->
@@ -56,8 +59,8 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                       <a class="dropdown-item" href="/project">Project</a>
-                      <a class="dropdown-item" target="_blank" href="https://github.com/Dorothyhung/SpotifyAnalysis">Project Code</a>
-                      <a class="dropdown-item" target="_blank" href="http://spotifyscraper.dorothyhung.net">Spotify Analysis Website</a>
+                      <a class="dropdown-item" target="_blank" href="https://github.com/Dorothyhung/P320-Spotify-API-Project">Project Code</a>
+                      <a class="dropdown-item" target="_blank" href="https://spotifyaudioanalysis.com/">SpotifyAudioAnalysis App</a>
                     </div>
                   </div>
                   <div class="dropdown show">
@@ -68,7 +71,6 @@
                       <a class="dropdown-item" id="flaskapp" href="/flaskapp">Flask Website</a>
                       <a class="dropdown-item" id="game" href="/game">Game</a>
                       <a class="dropdown-item" id="avgprogram" target="_blank" href="https://avg.dorothyhung.net">Average Program</a>
-                      <a class="dropdown-item" href="/counter">Row Counter</a>
                       <a class="dropdown-item" id="notesapp" href="/notesapp">Notes App</a>
                       <a class="dropdown-item" href="/horsepower">Horsepower Statistics</a>
                     </div>
