--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -2,34 +2,52 @@
 {% block title %} Dorothy Hung {% endblock %}
 
 {% block content %}
-<br/>
-<h3>Dorothy Hung</h3>
-</br>
-
-
-<h4><b>Student at Bellevue College</b></h4>
-</br>
-<h4><em>
-    BAS, Software (App) Development 2024<br>
-    AAS, Business Data Analysis 2022
-</em></h4>
-</br>
-
-<h4>
-    Use the navbar to view resume, Github, Linkedn, and other projects!
-</h4>
-
-
-
-
-
-</br>
-<center><h4><em>Contact me at <a href = "mailto: dorothyh0602@gmail.com">dorothyh0602@gmail.com</a></center>
-</em></h4>
-</br></br>
-<center><img src="/static/images/me.jpg" alt="extremeswag" style="width:105px; height:140px;"></center>
-</br></br>
-
+<div class="text-center p-5">
+    <div class="default-page">
+        <div class="container-fluid">
+          <div class="container-fluid text-white custom-shadow py-4">
+              <div class="row">
+                  <div class="col-sm-4 text-right">
+                      <img src="../static/images/DorothyHung.jpg" style="height:100px">
+                  </div>
+                  <div class="col-sm-8">
+                      <h2><b>Dorothy Hung</b></h2>
+                      <h4>Software Development Student</h4>
+                      <p>Email: dorothyh0602@gmail.com</p>
+                  </div>
+              </div>
+          </div><br>
+      
+          <div class="container-fluid text-white py-4">
+              <div class="row justify-content-center">
+                  <div class="col-sm-3 custom-shadow m-3 text-center">
+                      <h3><b>Bio</b></h3><br />
+                      <p>I am a junior at Bellevue College interested in a career in 
+                          software engineering work, specifically app development. 
+                          I am excited to be working at Microsoft as an intern this coming summer.</p>
+                  </div>
+      
+                  <div class="col-sm-3 custom-shadow m-3 text-center">
+                      <h3><b>Education</b></h3> <h4>Bellevue College</h4><br />
+                      <p><b>2025</b> In Progress</p>
+                      <p>Software Development, BAS</p></br>
+                      <p><b>2023</b> Complete</p>
+                      <p>Information Systems, AAS</p>
+                  </div>
+                  
+                  <div class="col-sm-4 custom-shadow m-3 text-center">
+                      <h3><b>Experience</b></h3><br />
+                      <p><b>Microsoft</b>  Incoming SWE Intern, May 2024</p><br />
+                      <p><b>Nelnet</b>  Software Engineer Intern, July 2023</p><br />
+                      <p><b>KBR</b>  Software Engineer Intern, May 2023</p><br />
+                      <p><b>Costco</b>  Data Ops Intern, January 2023</p>
+                  </div>
+              </div>
+          </div><br><br>
+      </div>
+      </div>
+    </br></br>
+</div>
 
 
 
