--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -8,7 +8,7 @@
           <div class="container-fluid text-white custom-shadow py-4">
               <div class="row">
                   <div class="col-sm-4 text-right">
-                      <img src="../static/images/DorothyHung.jpg" style="height:100px">
+                      <img src="/static/images/Dorothyhung.jpg" style="height:100px">
                   </div>
                   <div class="col-sm-8">
                       <h2><b>Dorothy Hung</b></h2>
