--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -72,6 +72,7 @@
                       <a class="dropdown-item" id="game" href="/game">Game</a>
                       <a class="dropdown-item" id="avgprogram" target="_blank" href="https://avg.dorothyhung.net">Average Program</a>
                       <a class="dropdown-item" id="notesapp" href="/notesapp">Notes App</a>
+                      <a class="dropdown-item" href="/horsepower">Horsepower Statistics</a>
                     </div>
                   </div>
                   <a class="nav-item nav-link font-weight-bold" id="contact" href="/contact">Contact Me</a>
