--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -56,8 +56,8 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                       <a class="dropdown-item" href="/project">Project</a>
-                      <a class="dropdown-item" target="_blank" href="https://github.com/Dorothyhung/P320-Spotify-API-Project">Project Code</a>
-                      <a class="dropdown-item" target="_blank" href="https://spotifyaudioanalysis.com/">SpotifyAudioAnalysis App</a>
+                      <a class="dropdown-item" target="_blank" href="https://github.com/Dorothyhung/SpotifyAnalysis">Project Code</a>
+                      <a class="dropdown-item" target="_blank" href="http://spotifyscraper.dorothyhung.net">Spotify Analysis Website</a>
                     </div>
                   </div>
                   <div class="dropdown show">
@@ -68,6 +68,7 @@
                       <a class="dropdown-item" id="flaskapp" href="/flaskapp">Flask Website</a>
                       <a class="dropdown-item" id="game" href="/game">Game</a>
                       <a class="dropdown-item" id="avgprogram" target="_blank" href="https://avg.dorothyhung.net">Average Program</a>
+                      <a class="dropdown-item" href="/counter">Row Counter</a>
                       <a class="dropdown-item" id="notesapp" href="/notesapp">Notes App</a>
                       <a class="dropdown-item" href="/horsepower">Horsepower Statistics</a>
                     </div>
