--- a/website/templates/resume.html
+++ b/website/templates/resume.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} My Resume {% endblock %}
+{% block title %} Dorothy's Resume {% endblock %}
 
 {% block content %}
 </br>
